--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <p>致我最爱的xxx（这里可以改名字 ）</p>
+    <p>给你的爱心</p>
     <canvas id="pinkboard"></canvas>
     <script>
         var settings = {
